# OneData-DevOps-Assessment

./: .dockerignore  Dockerfile  LOCAL_DEPLOYMENT.md  Makefile  README.md  pyproject.toml  requirements.txt  setup-complete.ps1
.github/workflows/: ci-cd.yml
app/: main.py
k8s/: deployment.yaml  service.yaml
scripts/: deploy-local.sh  integration-tests.sh  setup-and-deploy.sh
tests/: test_api.py  test_health.py  test_utils.py
