[tool.poetry]
name = "simple-python-app"
version = "0.1.0"
description = "A simple Python application with unit tests and CI/CD pipeline."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
requests = "^2.25"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
docker = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"